ghc-4335c07/testsuite/tests/rename/should_compile/Rn059_A.hs

module Rn059_A where

data A = A { label :: Char }

