ghc-4335c07/testsuite/tests/rename/should_fail/T13644B.hs
module T13644B where

data FuncId         = FuncId    { name       :: () }
